fixed dark mode toggle

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -34,7 +34,7 @@ h4 {
     font-size: 2em;
     text-align: center;
     font-weight: 100;
-    color: black;
+    color: var(--secondary);
     margin: 0.5em 0;
 }
   
@@ -57,6 +57,6 @@ p, h4, h5 {
     color: var(--button-text);
 }
 
-.button:hover, .button-inverted {
+.button:hover {
     opacity: 0.9;
 }
