--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,7 +17,7 @@
 }
 
 :root {
-  --primary: #FF0266;
+  --primary: #FFD226;
   --secondary: #FFFFFF;
   --secondary-inverted: #000000;
   --background: #212121;
